--- a/PortalDoFranqueadoGUI/View/ManagerCollection.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerCollection.xaml
@@ -53,11 +53,13 @@
             <DatePicker Grid.Row="1" Grid.Column="1" 
                         SelectedDate="{Binding CollectionStartDate}"
                         Margin="5"
-                        BorderThickness="0"/>
+                        BorderThickness="0"
+                        IsEnabled="{Binding CanEdit}"/>
             <DatePicker Grid.Row="1" Grid.Column="2" 
                         SelectedDate="{Binding CollectionEndDate}"
                         Margin="5"
-                        BorderThickness="0"/>
+                        BorderThickness="0"
+                        IsEnabled="{Binding CanEdit}"/>
             <TextBox Grid.Row="1" Grid.Column="3" 
                      Text="{Binding CollectionFolderId}"
                      MaxLength="33"
@@ -66,7 +68,8 @@
                      Background="Black"
                      Foreground="White"
                      BorderBrush="White"
-                     Height="22"/>
+                     Height="22"
+                     IsEnabled="{Binding CanEdit}"/>
             <TextBlock Grid.Row="1" Grid.Column="4"
                        Text="{Binding CollectionStatus, Converter={StaticResource EnumConverter}}"
                        Margin="5"
